--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.0",
-    "mssql": "^5.1.0",
     "mongoose-paginate": "^5.0.3",
+    "mssql": "^5.1.0",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
